--- a/RandoNuit.css
+++ b/RandoNuit.css
@@ -174,3 +174,162 @@ div.animateurs{
 #person4{
     opacity: 0.25;
 }
+
+/* ########## commentaires ########## */
+
+div.sectioncomm{
+    position: absolute;
+    background-color: #011627;
+    width: 1680px;
+    height: 1450px;
+    left: 120px;
+    top: 3550px;
+}
+
+div.sectioncomm h1{
+    font-style: normal;
+    margin: 0;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 80px;
+    letter-spacing: -2%;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+div.sectioncomm h3{
+    font-style: italic;
+    margin: 0;
+    margin-bottom: 75px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: 15%;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+div.squarecomm{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 1050px;
+    height: 1050px;
+    gap: 25px;
+    margin: auto;
+    margin-bottom: 100px;
+}
+
+div.commentaires{
+    background-color: #02223B;
+    width: 510px;
+    height: 510px;
+}
+
+div.commentaires p{
+    font-style: normal;
+    margin: 70px 120px;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 35px;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+div.commentaires p:last-child{
+    position: relative;
+    top: -130px;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+img.commentaires{
+    margin-top: 50px;
+}
+
+/* ########## ########## ########## */
+
+img.ganapathy{
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: -1.5%;
+    bottom: 80%;
+}
+
+div.gradient1{
+    position: absolute;
+    width: 1920px;
+    height: 375px;
+    left: 0px;
+    top: 820px;
+    background-image: linear-gradient(180deg, rgba(1, 22, 39, 0), #011627 75%, #011627 100%);
+}
+
+img.jjshev{
+    position: absolute;
+    width: 3290px;
+    height: 2465px;
+    left: -235px;
+    top: 1785px;
+}
+
+div.gradient2{
+    position: absolute;
+    width: 1920px;
+    height: 375px;
+    left: 0px;
+    top: 3870px;
+    background-image: linear-gradient(180deg, rgba(1, 22, 39, 0), #011627 75%, #011627 100%);
+}
+
+div.circlegradient1{
+    position: absolute;
+    width: 360px;
+    height: 425px;
+    left: -200px;
+    top: 1320px;
+    background: #41EAD4;
+    opacity: 0.5;
+    filter: blur(125px);
+    transform: rotate(-26deg);
+}
+
+div.circlegradient2{
+    position: absolute;
+    width: 1070px;
+    height: 1015px;
+    left: -180px;
+    top: 1260px;
+    background: #BE41EA;
+    opacity: 0.11;
+    filter: blur(125px);
+}
+
+div.circlegradient3{
+    position: absolute;
+    width: 360px;
+    height: 425px;
+    left: -200px;
+    top: 1320px;
+    background: #41EAD4;
+    opacity: 0.5;
+    filter: blur(125px);
+    transform: rotate(-26deg);
+}
+
+div.circlegradient4{
+    position: absolute;
+    width: 1100px;
+    height: 1045px;
+    left: 1060px;
+    top: 1415px;
+    background: #7741EA;
+    opacity: 0.1;
+    filter: blur(125px);
+}
